# ai-file-sorter

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  ERROR_CODES.md  ERROR_SYSTEM_SUMMARY.md  README.md  TESTS.md  TRADEMARKS.md  replit.md  run_info.sh
.ccls-cache/@@home@runner@workspace/: @nix@store@24z3hvyd57fhfmwbr5ipfpn2bbnw8yii-fmt-10.2.1-dev@include@fmt@core.h.blob  @nix@store@24z3hvyd57fhfmwbr5ipfpn2bbnw8yii-fmt-10.2.1-dev@include@fmt@format.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@bitsperlong.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno-base.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@int-ll64.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@posix_types.h.blob  (+458 more)
.ccls-cache/@home@runner@workspace/: app@include@IProvider.hpp  (+16 more)
api-key-encryption/: compile.sh  obfuscate_encrypt.cpp
app/: CMakeLists.txt  ERROR_CODE_EXAMPLES.cpp  Makefile  build_windows.ps1  includePaths.txt  main.cpp  startapp_linux.cpp  startapp_windows.cpp  vcpkg.json
app/build-tests/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  ai_file_sorter_tests  cmake_install.cmake  compile_commands.json
app/build-tests/.rcc/: app_resources.qrc
app/build-tests/Testing/Temporary/: CTestCostData.txt
app/build-tests/catch2-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
app/build-tests/catch2-build/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
app/build-tests/llama-build/: Makefile  cmake_install.cmake  llama.pc
app/build-tests/llama-build/ggml/: Makefile  cmake_install.cmake  ggml-config.cmake
app/build-tests/llama-build/ggml/src/: Makefile  cmake_install.cmake
app/build-tests/llama-build/ggml/src/ggml-cpu/: Makefile
app/build-tests/llama-build/src/: Makefile
app/include/: AnalysisCoordinator.hpp  AnalysisEntryRouter.hpp  AppException.hpp  AppInfo.hpp  CategorizationDialog.hpp  CategorizationProgressDialog.hpp  CategorizationService.hpp  CategorizationServiceTestAccess.hpp  CategorizationSession.hpp  CategoryLanguage.hpp  CloudCompatibilityProvider.hpp  CloudPathDetectorProvider.hpp  CloudPathSupport.hpp  ConsistencyPassService.hpp  CustomApiDialog.hpp  CustomLLMDialog.hpp  DatabaseManager.hpp  DialogUtils.hpp  DocumentTextAnalyzer.hpp  DryRunPreviewDialog.hpp  EmbeddedEnv.hpp  ErrorCode.hpp  ErrorMessages.hpp  ExternalProcessStorageProvider.hpp  FileScanner.hpp  FolderLearningDialog.hpp  GeminiClient.hpp  GgmlRuntimePaths.hpp  ILLMClient.hpp  ImageAnalyzer.hpp  ImageAnalyzerFactory.hpp  ImageRenameMetadataService.hpp  IniConfig.hpp  LLMClient.hpp  LLMDownloader.hpp  LLMErrors.hpp  LLMSelectionDialog.hpp  LLMSelectionDialogTestAccess.hpp  Language.hpp  LlamaModelParams.hpp  (+56 more)
app/lib/: AnalysisCoordinator.cpp  AnalysisEntryRouter.cpp  CategorizationDialog.cpp  CategorizationProgressDialog.cpp  CategorizationService.cpp  CategorizationSession.cpp  CloudCompatibilityProvider.cpp  CloudPathDetectorProvider.cpp  CloudPathSupport.cpp  ConsistencyPassService.cpp  CryptoManager.cpp  CustomApiDialog.cpp  CustomLLMDialog.cpp  DatabaseManager.cpp  DialogUtils.cpp  DocumentTextAnalyzer.cpp  EmbeddedEnv.cpp  ExternalProcessStorageProvider.cpp  FileScanner.cpp  FolderLearningDialog.cpp  GeminiClient.cpp  GgmlRuntimePaths.cpp  ImageAnalyzerFactory.cpp  ImageRenameMetadataService.cpp  IniConfig.cpp  LLMClient.cpp  LLMDownloader.cpp  LLMSelectionDialog.cpp  LlavaImageAnalyzer.cpp  LlmCatalog.cpp  LocalFsProvider.cpp  LocalLLMClient.cpp  MainApp.cpp  MainAppEditActions.cpp  MainAppHelpActions.cpp  MainAppTestAccess.cpp  MainAppUiBuilder.cpp  MainWindowStateBinder.cpp  MediaRenameMetadataService.cpp  MovableCategorizedFile.cpp  (+35 more)
app/plugins/: onedrive_storage_plugin_main.cpp
app/resources/: .env  app.qrc
app/resources/i18n/: aifilesorter_de.qm  aifilesorter_de.ts  aifilesorter_es.qm  aifilesorter_es.ts  aifilesorter_fr.qm  aifilesorter_fr.ts  aifilesorter_it.qm  aifilesorter_it.ts  aifilesorter_ko.ts  aifilesorter_nl.qm  aifilesorter_nl.ts  aifilesorter_tr.qm  aifilesorter_tr.ts
app/resources/windows/: app_icon.rc.in  version.rc.in
app/scripts/: README.md  adhoc_codesign_macos.sh  build_llama_linux.sh  build_llama_macos.sh  build_llama_windows.ps1  build_plugins_common.sh  build_plugins_linux.sh  build_plugins_macos.sh  build_plugins_windows.ps1  collect_linux_diagnostics.sh  collect_macos_diagnostics.sh  collect_windows_diagnostics.ps1  gen_run_wrapper.py  generate_icon.ps1  generate_plugin_payload.sh  generate_storage_plugin_payload.sh  package_deb.sh  plugin_build_targets.tsv  rebuild_and_test.sh  run_aifilesorter.sh.in  upload_plugins.py  upload_storage_plugins.py  vendor_doc_deps.ps1  vendor_doc_deps.sh  verify_onedrive_windows_sync_root.ps1
app/scripts/examples/storage/: catalog.sample.json
attached_assets/: Pasted--Replit-Agent-Mega-Brief-Daemon-Codex-AI-File-Sorter-Fo_1765730529158.txt
build-tests/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
changelog/: 2026-01-06-changelog-visual-llm-rename-cache-build.md  2026-01-09-image-only-processing-option.md  2026-01-24-korean-ui-language-tests-build-fix.md
tests/: run_all_tests.sh  run_database_tests.sh  run_translation_tests.sh
(+60 files in other folders)
